--- a/bio.html
+++ b/bio.html
@@ -23,7 +23,7 @@
 
         <div class="content">
             <div class="profile">
-                <img src= "images/crossroads.jpg" alt="Image is not available.">
+                <img src="images/crossroads.jpg" alt="Image is not available">
             </div>  
 
             <h3>My Story</h3>
